--- a/InternshipSkeleton/Content/loggingProjectStyle.css
+++ b/InternshipSkeleton/Content/loggingProjectStyle.css
@@ -52,6 +52,18 @@
     width: 25% !important;
     display: inline-block;
 }
+.filledIcon {
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.unfilledIcon {
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 /* ------------------------------- Sorting Links -------------------- */
