--- a/InternshipSkeleton/Content/loggingProjectStyle.css
+++ b/InternshipSkeleton/Content/loggingProjectStyle.css
@@ -1,5 +1,5 @@
 ﻿
-/* --------------------- Custom ----------------- */
+/* ---------------------------- Custom ------------------------ */
 .mydropdown {
     padding: 0px !important;
     font-size: 14px !important;
@@ -52,6 +52,8 @@
     width: 25% !important;
     display: inline-block;
 }
+
+/* -----------------------Icons ---------------------------------------- */
 .filledIcon {
     height: 75%;
     display: block;
@@ -70,7 +72,7 @@
     border: none;
     display: inline-block;
     text-align: center;
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50; 
     color: white;
     width: 100%;
 }
@@ -83,13 +85,6 @@
     color: white;
     width: 100%;
 }
-
-/* ---------------------------- Button Group---- maybe can take this out? ------------------- */
-.btn-group:after {
-    content: "";
-    clear: both;
-    display: table;
-} 
 
 /* ------------------------------------ Table stuff ----------------------- */
 table, thead, td, tr {
